[package]
name = "activities-examples"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
default-run = "main"

[dependencies]
temporal-sdk.workspace = true
temporal-client.workspace = true
temporal-sdk-core.workspace = true
temporal-sdk-core-protos.workspace = true
temporal-sdk-core-api.workspace = true
anyhow.workspace = true

dotenv.workspace = true
helper.workspace = true
log.workspace = true
env_logger.workspace = true
tokio = { workspace = true, features = ["time"]}
nanoid.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
prost-wkt-types.workspace = true

[lints]
workspace = true
