[package]
name = "child-workflows"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
default-run = "main"

[dependencies]
temporal-sdk.workspace = true
temporal-client.workspace = true
temporal-sdk-core.workspace = true
temporal-sdk-core-protos.workspace = true
anyhow.workspace = true

dotenv.workspace = true
helper.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
nanoid.workspace = true

[lints]
workspace = true
