[package]
name = "continue-as-new"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
temporal-sdk.workspace = true
temporal-client.workspace = true
temporal-sdk-core.workspace = true
temporal-sdk-core-protos.workspace = true
anyhow.workspace = true

dotenv.workspace = true
helper.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
nanoid.workspace = true

[lints]
workspace = true
