[package]
name = "encryption"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "main"

[dependencies]
temporal-sdk.workspace = true
temporal-client.workspace = true
temporal-sdk-core.workspace = true
temporal-sdk-core-protos.workspace = true
helper.workspace = true

anyhow.workspace = true
dotenv.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
nanoid.workspace = true
prost.workspace = true
aes-gcm = "0.10"
base64 = "0.22"
