[package]
name = "encryption"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "main"

[dependencies]
temporal-client = { git = "https://github.com/Lemon-Fork-Repository/sdk-core.git" }
temporal-sdk = { git = "https://github.com/Lemon-Fork-Repository/sdk-core.git" }
temporal-sdk-core = { git = "https://github.com/Lemon-Fork-Repository/sdk-core.git" }
temporal-sdk-core-protos = { git = "https://github.com/Lemon-Fork-Repository/sdk-core.git" }

anyhow.workspace = true
dotenv.workspace = true
log.workspace = true
env_logger.workspace = true
tokio.workspace = true
nanoid.workspace = true
prost.workspace = true
base64.workspace = true
aes-gcm = "0.10"
serde_json.workspace = true
serde = { version = "1.0.208", features = ["derive"] }
