[package]
name = "hello-world"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "main"

[dependencies]
temporal-sdk.workspace = true
temporal-client.workspace = true
temporal-sdk-core.workspace = true
anyhow.workspace = true

dotenv.workspace = true
helper.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tokio.workspace = true
nanoid.workspace = true
