[package]
name = "helper"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
gethostname = "0.5"
temporal-sdk.workspace = true
temporal-client.workspace = true
temporal-sdk-core.workspace = true
anyhow.workspace = true
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
uuid = { version = "1.10.0", features = ["v4"] }

[lints]
workspace = true
