[package]
name = "helper"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true

[dependencies]
gethostname = "0.5"
temporal-sdk.workspace = true
temporal-client.workspace = true
temporal-sdk-core.workspace = true
temporal-sdk-core-protos.workspace = true

anyhow.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1.10.0", features = ["v4"] }

[lints]
workspace = true
