[package]
name = "schedules"
edition.workspace = true
license.workspace = true
authors.workspace = true
version.workspace = true
default-run = "main"

[[bin]]
name = "client"
path = "src/bin/start_schedules.rs"

[[bin]]
name = "go-faster"
path = "src/bin/go_faster.rs"

[[bin]]
name = "pause"
path = "src/bin/pause_schedule.rs"

[[bin]]
name = "unpause"
path = "src/bin/unpause_schedule.rs"

[[bin]]
name = "delete"
path = "src/bin/delete_schedule.rs"

[dependencies]
temporal-sdk.workspace = true
temporal-client.workspace = true
temporal-sdk-core.workspace = true
anyhow.workspace = true

dotenv.workspace = true
helper.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
nanoid.workspace = true
uuid.workspace = true
chrono.workspace = true

[lints]
workspace = true
