[package]
name = "search-attributes"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
default-run = "main"

[dependencies]
temporal-sdk.workspace = true
temporal-client.workspace = true
temporal-sdk-core.workspace = true
temporal-sdk-core-protos.workspace = true
helper.workspace = true

anyhow.workspace = true
dotenv.workspace = true
env_logger.workspace = true
log.workspace = true
tokio.workspace = true
nanoid.workspace = true
serde_json.workspace = true
chrono.workspace = true
serde = "1.0.208"
